--- a/data/slide1.css
+++ b/data/slide1.css
@@ -1,1 +1,1 @@
-#spr1_f6fe68 {clip:rect(0px,1280px,720px,0px);}#txt0_f6fe68,#txt1_f6fe68,#txt2_f6fe68 {font-family:fnt4; font-size:58.667px; line-height:83px; color:#005864;}#txt3_f6fe68 {font-family:fnt5; font-size:37.333px; line-height:54px; font-weight:bold; color:#00b9d2;}
+#spr1_9b2cf0f {clip:rect(0px,1280px,720px,0px);}#txt0_9b2cf0f,#txt1_9b2cf0f,#txt2_9b2cf0f {font-family:fnt4; font-size:58.667px; line-height:83px; color:#005864;}#txt3_9b2cf0f {font-family:fnt5; font-size:37.333px; line-height:54px; font-weight:bold; color:#00b9d2;}
